reworked saving of shifts in the system, added branches, still have to fix the tests